--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,17 @@
 .wrapper {
-	max-width: 31.25rem;
-
-	margin: 0rem auto;
 	padding-top: 6.25rem;
 
 	display: flex;
+	justify-content: center;
+}
+
+.sub-wrapper {
+	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 24px;
+	gap: 1.5rem;
+
+	min-width: 300px;
 }
 
 .title {
@@ -31,4 +35,28 @@
 .creative-button:hover {
 	background-color: black;
 	color: white;
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+
+	margin-top: 5.8125rem;
+}
+
+.input {
+	padding: 0.3rem 0.5rem;
+}
+
+.input-desc {
+	color: #868686;
+
+	font-size: 0.8rem;
+}
+
+.maker {
+	position: fixed;
+	right: 3.125rem;
+	bottom: 3.125rem;
 }
