✨ Feat: ga init

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,6 +3,10 @@
 
 	display: flex;
 	justify-content: center;
+
+	@media screen and (max-width: 720px) {
+		flex-direction: column;
+	}
 }
 
 .sub-wrapper {
