--- a/src/components/LoadingSpinner/index.module.css
+++ b/src/components/LoadingSpinner/index.module.css
@@ -1,8 +1,12 @@
 .loader {
 	position: fixed;
+
 	top: 50%;
-	left: 50%;
-	transform: translate(50%, -50%);
+	transform: translate(0, -50%);
+
+	margin: 0 auto;
+	left: 0;
+	right: 0;
 
 	width: 48px;
 	height: 48px;
