--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,15 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
 	margin: 0;
 	padding: 0;
 	font: inherit;
 	color: inherit;
 }
+
 *,
 :after,
 :before {
 	box-sizing: border-box;
 	flex-shrink: 0;
 }
+
 :root {
 	-webkit-tap-highlight-color: transparent;
 	-webkit-text-size-adjust: 100%;
@@ -20,10 +26,12 @@
 	-moz-tab-size: 4;
 	tab-size: 4;
 }
+
 html,
 body {
 	height: 100%;
 }
+
 img,
 picture,
 video,
@@ -32,14 +40,17 @@ svg {
 	display: block;
 	max-width: 100%;
 }
+
 button {
 	background: none;
 	border: 0;
 	cursor: pointer;
 }
+
 a {
 	text-decoration: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
